form container alignment fix

--- a/src/app/card-input/card-input.component.scss
+++ b/src/app/card-input/card-input.component.scss
@@ -1,12 +1,23 @@
 .cardInput-main-container {
+  // display: flex;
+  // flex-direction: column;
+  // // border: 1px solid lightgray;
+  // border-radius: 10px;
+  // width: 100%;
+  // max-width: 220px;
+  // padding: 10px;
+  // // margin: 20px;
+  // margin: 15px 10px;
+  // margin-top: -10px;
+  // box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  // border: 1px solid lightgray;
-  border-radius: 10px;
-  width: 220px;
-  padding: 10px;
-  margin: 20px;
-  margin-top: -10px;
+    flex-direction: column;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 220px;
+    padding: 10px;
+    margin: 15px -18px 0px -1px;
+    margin-top: -10px;
 
 }
 
@@ -33,11 +44,12 @@ a:hover {
 
 input {
   display: flex;
-  width: 220px;
+  // width: 220px;
   height: 30px;
   border-radius: 5px;
   border: 1px solid lightgray;
   margin-bottom: 20px;
+  padding: 5px;
 }
 
 select {
